--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta
-            name="description"
+            name="Jake Rothstein's Resume Website"
             content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Resume</title>
 
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
